[tool.poetry]
name = "web-11"
version = "0.1.0"
description = ""
authors = ["paukdv <paukdv@gmail.com>"]
readme = "README.md"
packages = [{include = "web_11"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
pydantic = {extras = ["email"], version = "^2.4.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
